[project]
name = "markdown-note-taking-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "language-tool-python>=3.4.0",
    "markdown>=3.10.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
